--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+spring.r2dbc.url=r2dbc:postgres://localhost:5432/test_db
+spring.r2dbc.username=root
+spring.r2dbc.password=root
+spring.r2dbc.pool.enabled=true
